Изменения запуска проекта в дев моде, fix для Jetty с использованием javaagent